@@ -1,3 +1,4 @@
+	* removed (broken) support for incoming connections over socks5
 	* deprecate torrent_added_alert (in favor of add_torrent_alert)
 	* fix python binding for parse_magnet_uri
 	* fix minor robustness issue in DHT bootstrap logic
